Styling button layout and display positioning
Adding vertical and horizontal centering to body tag and styling calculator button layout using flex property.

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,14 @@
 .app {
-  display: flex;
+  /*display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;*/
+}
+
+.calculator-container {
+  width: 400px;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
