--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -1,8 +1,16 @@
 .button-section {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  //display: grid;
+  //grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
+  button {
+    width: 50px;
+    margin: 0.3rem;
+  }
   .fifth-row {
-    grid-template-columns: repeat(2, 1fr);
   }
 }
