--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @use "ToggleSwitch";
 
 @use "HeaderSection";
+@use "ButtonSection";
 
 :root {
   /*Font size*/
@@ -75,5 +76,8 @@
 
 body {
   font-family: "League Spartan", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
