--- a/src/scss/DisplaySection.scss
+++ b/src/scss/DisplaySection.scss
@@ -1,8 +1,11 @@
 .screen-section {
-  input {
-    height: 50px;
-    outline: none;
-    border-radius: 5px;
-    border: 1px solid #000;
+  width: 100%;
+
+  .value-display {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 90px;
+    border: 1px solid black;
   }
 }
