--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -6,10 +6,13 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--clr-th1-toggle-and-key-bg);
+  border-radius: 7px;
+  padding: 1rem;
 
   button {
     width: 50px;
-    margin: 0.3rem;
+    margin: 0.4rem;
   }
 
   .fifth-row {
