--- a/src/scss/DisplaySection.scss
+++ b/src/scss/DisplaySection.scss
@@ -1,6 +1,8 @@
 .screen-section {
   width: 100%;
   border-radius: 7px;
+  margin: 1rem 0 1rem 0;
+  
   .value-display {
     display: flex;
     align-items: center;
