--- a/src/scss/ToggleSwitch.scss
+++ b/src/scss/ToggleSwitch.scss
@@ -3,6 +3,13 @@
   justify-content: center;
   align-items: flex-end;
 
+  p {
+    color: var(--clr-th1-key-bg-lgo);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__switch {
     display: inline-flex;
     justify-content: center;
