Button sections styling
Removing default button styles and adding custom styles to calculator buttons.

--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -9,8 +9,11 @@
   padding: 1rem;
 
   button {
-    width: 50px;
+    width: 60px;
     margin: 0.4rem;
+    padding: 0.5rem;
+    border-radius: 7px;
+    border: none;
   }
 
   .fifth-row {
