--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -4,26 +4,30 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--clr-th1-toggle-and-key-bg);
   border-radius: 7px;
-  padding: 1rem;
+  padding: 0.75rem;
 
   button {
-    width: 60px;
-    margin: 0.4rem;
-    padding: 0.5rem;
+    width: 75px;
+    margin: 0.5rem;
+    padding: 0.65rem;
     border-radius: 7px;
     border: none;
+    font-weight: 600;
+    font-size: 1.2rem;
   }
 
   .fifth-row {
+    width: 100%;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    padding: 0 0.25rem 0 0.25rem;
 
     button {
       width: 50%;
+      text-transform: uppercase;
     }
   }
 }
