Button and toggle switch styling
Using useRef code to access button text and toggle switch to change colors when a different theme has been picked.

--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -17,6 +17,10 @@
     font-size: 1.2rem;
   }
 
+  button:hover {
+    cursor: pointer;
+  }
+
   .fifth-row {
     width: 100%;
     text-align: center;
