--- a/src/scss/HeaderSection.scss
+++ b/src/scss/HeaderSection.scss
@@ -3,4 +3,9 @@
   place-items: center;
   justify-content: space-between;
   width: 100%;
+
+  .logo {
+    font-weight: 600;
+    font-size: 1.5rem;
+  }
 }
