--- a/src/scss/ToggleSwitch.scss
+++ b/src/scss/ToggleSwitch.scss
@@ -3,20 +3,21 @@
   justify-content: center;
   align-items: flex-end;
 
-  p {
+  .theme-label {
     color: var(--clr-th1-key-bg-lgo);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-right: 1rem;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    font-weight: 600;
   }
 
   &__switch {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid #444;
-    border-radius: 10px;
+    border-radius: 12px;
+    width: 65px;
+    height: 25px;
   }
 
   &__theme-switcher {
@@ -32,8 +33,8 @@
     }
 
     .checkmark {
-      width: calc(100% - 6px);
-      height: calc(100% - 6px);
+      width: calc(100% - 5px);
+      height: calc(100% - 5px);
       background-color: hsl(6, 63%, 50%);
       border-radius: 50%;
       display: inline-block;
