--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -1,20 +1,22 @@
 .button-section {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   border-radius: 7px;
   padding: 0.75rem;
 
-  button {
-    width: 75px;
-    margin: 0.5rem;
-    padding: 0.65rem;
-    border-radius: 7px;
-    border: none;
-    font-weight: 600;
-    font-size: 1.2rem;
+  .four-row-btn {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+    button {
+      width: 75px;
+      margin: 0.5rem;
+      padding: 0.65rem;
+      border-radius: 7px;
+      border: none;
+      font-weight: 600;
+      font-size: 1.2rem;
+    }
   }
 
   button:hover {
@@ -22,16 +24,19 @@
   }
 
   .fifth-row {
-    width: 100%;
     text-align: center;
-    display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 0 0.25rem 0 0.25rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 
     button {
-      width: 50%;
+      width: 100%;
       text-transform: uppercase;
+      padding: 0.65rem;
+      border-radius: 7px;
+      border: none;
+      font-weight: 600;
+      font-size: 1.2rem;
     }
   }
 }
