--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -4,6 +4,16 @@
   border-radius: 7px;
   padding: 0.75rem;
 
+  button {
+    border-radius: 7px;
+    border: none;
+    font-weight: 600;
+    font-size: 1.2rem;
+    outline: none;
+    cursor: pointer;
+    padding: 0.65rem;
+  }
+
   .four-row-btn {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -11,32 +21,18 @@
     button {
       width: 75px;
       margin: 0.5rem;
-      padding: 0.65rem;
-      border-radius: 7px;
-      border: none;
-      font-weight: 600;
-      font-size: 1.2rem;
     }
   }
 
-  button:hover {
-    cursor: pointer;
-  }
-
   .fifth-row {
-    text-align: center;
-    align-items: center;
     display: grid;
+    gap: 1rem;
     grid-template-columns: repeat(2, 1fr);
 
     button {
       width: 100%;
       text-transform: uppercase;
-      padding: 0.65rem;
-      border-radius: 7px;
-      border: none;
-      font-weight: 600;
-      font-size: 1.2rem;
+      margin-top: 0.5rem;
     }
   }
 }
