--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -1,6 +1,5 @@
 .button-section {
   width: 100%;
-  align-items: center;
   border-radius: 7px;
   padding: 0.75rem;
 
@@ -26,13 +25,15 @@
 
   .fifth-row {
     display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+    justify-content: space-between;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
 
     button {
-      width: 100%;
+      width: 90%;
       text-transform: uppercase;
-      margin-top: 0.5rem;
+      margin: 0.5rem;
     }
   }
 }
