--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,7 +1,3 @@
 .calculator-container {
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // width: 400px;
 }
