--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -11,6 +11,7 @@
     outline: none;
     cursor: pointer;
     padding: 0.65rem;
+    // box-shadow: 0px 3px 0px 0px hsl(28, 16%, 65%);
   }
 
   .four-row-btn {
