--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -11,7 +11,7 @@
     outline: none;
     cursor: pointer;
     padding: 0.65rem;
-    // box-shadow: 0px 3px 0px 0px hsl(28, 16%, 65%);
+    text-transform: uppercase;
   }
 
   .four-row-btn {
@@ -33,8 +33,67 @@
 
     button {
       width: 90%;
-      text-transform: uppercase;
       margin: 0.5rem;
     }
+  }
+
+  // Numeric Button Theme Styles
+  .theme-one-btn-style {
+    background-color: var(--clr-th1-key-bg-lgo);
+    color: var(--clr-th1-key-bg-ddb);
+    box-shadow: 0 3px 0 0 var(--clr-th1-key-sh-go);
+  }
+
+  .theme-two-btn-style {
+    background-color: var(-clr-th2-key-bg-lgy);
+    color: var(--clr-th2-very-dark-grayish-yellow);
+    box-shadow: 0 3px 0 0 var(--clr-th2-key-sh-dgo);
+  }
+
+  .theme-three-btn-style {
+    background-color: var(--clr-th3-key-bg-vdv);
+    color: var(--clr-th3-light-yellow);
+    box-shadow: 0 3px 0 0 var(--clr-th3-key-sh-dm);
+  }
+
+  // Delete and Reset button theme styles
+  .del-theme-one,
+  .reset-theme-one {
+    background-color: var(--clr-th1-key-bg-ddb);
+    color: var(--clr-white);
+    box-shadow: 0 3px 0 0 var(--clr-th1-key-sh-ddb);
+  }
+
+  .del-theme-two,
+  .reset-theme-two {
+    background-color: var();
+    color: var();
+    box-shadow: 0 3px 0 0;
+  }
+
+  .del-theme-three,
+  .reset-theme-three {
+    background-color: var();
+    color: var();
+    box-shadow: 0 3px 0 0;
+  }
+
+  // Equal sign button theme styles
+  .equal-sign-theme-one {
+    background-color: var();
+    color: var();
+    box-shadow: 0 3px 0 0;
+  }
+
+  .equal-sign-theme-two {
+    background-color: var();
+    color: var();
+    box-shadow: 0 3px 0 0;
+  }
+
+  .equal-sign-theme-three {
+    background-color: var();
+    color: var();
+    box-shadow: 0 3px 0 0;
   }
 }
