--- a/src/scss/ToggleSwitch.scss
+++ b/src/scss/ToggleSwitch.scss
@@ -1,7 +1,7 @@
 .toggle-switch {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 
   .theme-label {
     color: var(--clr-th1-key-bg-lgo);
