--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -1,7 +1,10 @@
 .button-section {
-  width: 100%;
   border-radius: 7px;
   padding: 0.75rem;
+
+  @media (max-width: 40em) {
+    width: 22rem;
+  }
 
   button {
     border-radius: 7px;
@@ -19,8 +22,12 @@
     grid-template-columns: repeat(4, 1fr);
 
     button {
-      width: 75px;
+      width: 4rem;
       margin: 0.5rem;
+
+      @media (max-width: 40em) {
+        height: 4rem;
+      }
     }
   }
 
@@ -34,6 +41,10 @@
     button {
       width: 90%;
       margin: 0.5rem;
+
+      @media (max-width: 40em) {
+        height: 4rem;
+      }
     }
   }
 
