--- a/src/scss/ButtonSection.scss
+++ b/src/scss/ButtonSection.scss
@@ -1,9 +1,10 @@
 .button-section {
   border-radius: 7px;
   padding: 0.75rem;
+  width: 370px;
 
   @media (max-width: 40em) {
-    width: 22rem;
+    width: 20rem;
   }
 
   button {
@@ -15,15 +16,20 @@
     cursor: pointer;
     padding: 0.65rem;
     text-align: center;
+
+    @media (max-width: 40em) {
+      font-size: 1.6rem;
+    }
   }
 
   .four-row-btn {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 1em;
+    margin-bottom: 1rem;
 
     button {
-      width: 4rem;
-      margin: 0.5rem;
+      width: 100%;
 
       @media (max-width: 40em) {
         height: 4rem;
@@ -32,15 +38,14 @@
   }
 
   .fifth-row {
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
+    gap: 1em;
 
     button {
-      width: 90%;
-      margin: 0.5rem;
+      width: 100%;
 
       @media (max-width: 40em) {
         height: 4rem;
